# AlphaSift

./: .gitignore  README.md  pyproject.toml  pytest.ini
docker/: sandbox.Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AsyncView.tsx  SectionCard.tsx  StatusBadge.tsx  Timestamp.tsx
frontend/src/pages/: AiRunsPage.test.tsx  AiRunsPage.tsx  ArtifactsPage.tsx  DashboardPage.tsx  ExperimentsPage.test.tsx  ExperimentsPage.tsx  JobsPage.tsx  PaperSessionsPage.test.tsx  PaperSessionsPage.tsx  StrategiesPage.tsx
frontend/src/test/: mockApi.ts
scripts/: fetch_kraken_ohlc.py  run_api.py  run_backtest.py  run_paper_trader.py  run_sma_experiments.py  run_strategy_backtest.py
src/alphasift/: config.py
src/alphasift/ai/: __init__.py  base.py  gemini_client.py  models.py  prompts.py  service.py
src/alphasift/app/: __init__.py  api.py  db.py  jobs.py  schemas.py  services.py
src/alphasift/backtest/: __init__.py  engine.py  metrics.py  models.py
src/alphasift/data/: __init__.py  base.py  cache.py  kraken_client.py  loaders.py  (+2 more)
tests/: _temp_app.py  conftest.py  test_ai_service.py  test_app_api.py  test_app_db.py  test_app_services.py  test_backtest_engine.py  test_experiments_export.py  test_experiments_integration.py  test_experiments_runner.py  test_kraken_provider.py  test_paper_engine.py  test_paper_export.py  test_paper_integration.py  test_sandbox_runner.py  test_strategies.py  test_strategy_integration.py
(+17 files in other folders)
